# Frontend

./: .editorconfig  pyproject.toml  setup.cfg
.github/workflows/: docker-publish.yml
front/: app.py
front/templates/: index.html
shop/: Dockerfile  __main__.py  config.py
shop/API/: categories.py  client.py  models.py  schemas.py
shop/templates/: base.html  index.html  model_edit.html  models.html
shop/views/: models.py
