[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Dmitriy Volynkin <volynkin-da@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
wemake-python-styleguide = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
